Thu Aug 17 16:58:12 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added QuartzDBManager, to manage the databases files and
	  environments in use.

Thu Aug 17 16:46:00 BST 2000 Olly Betts

	* A few tweaks to NetworkMatch

Thu Aug 17 16:14:00 BST 2000 Olly Betts

	* Weighting scheme now specified in OmSettings; termweights now
	  deleted by LeafPostList rather than LocalMatch.  No changes to
	  external APIs this time!

Thu Aug 17 14:54:00 BST 2000 Olly Betts

	* To speed things up with debug builds, DEBUG_CALL and
	  DEBUG_CALL_STATIC now check debug type earlier and avoid building
	  strings if this debug message is disabled.

Wed Aug 16 21:18:03 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Quartz throws OmInimplementedError from all its public methods.

	* Added a FIXME in all IRDatabase (and subclass) destructors - mustn't
	  throw exceptions.

Wed Aug 16 17:12:00 BST 2000 Olly Betts

	* WARNING: Incompatible changes to API!

	* Replaced OmMatchOptions and OmExpandOptions with OmSettings.

Wed Aug 16 17:05:04 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Fixed a bug which could cause a TCP server to loop nastily if
	  an exception were thrown.

Wed Aug 16 13:53:00 BST 2000 Olly Betts

	* Fixed up a few mismatched OmSettings parameter names.

Wed Aug 16 12:41:00 BST 2000 Olly Betts

	* WARNING: Incompatible changes to API!

	* OmSettings used to replace DatabaseBuilderParams and ad-hoc
	  passing of database parameters as vector<string>.
	  
	* Added OmSettings::get_description() and macros so it can be
	  written to streams

	* OmSettings values can now also be bool or vector<string>

	* Backend types da_flimsy/da_heavy replaced by da with heavyduty
	  parameter.  Similarly for db_* backends.

Wed Aug 16 12:08:00 BST 2000 Olly Betts

	* stemtest.pl now complains if srcdir isn't set

Tue Aug 15 21:13:22 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
