@@ -1,3 +1,7 @@
+Thu Aug 17 17:16:00 BST 2000 Olly Betts
+
+	* Merged select_query_terms into build_query_tree
+
 Thu Aug 17 16:58:12 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
 
 	* Added QuartzDBManager, to manage the databases files and
